k8s-manifests/03-advanced-delivery/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-frontend-route
  namespace: demo
spec:
  to:
    kind: Service
    name: demo-frontend
    weight: 100
  alternateBackends:
  - kind: Service
    name: demo-frontend-canary
    weight: 0
  port:
    targetPort: 80
